name:                stm-promise
version:             0.1.0.0
synopsis:            Simple STM Promises for IO computations and external processes
homepage:            www.github.com/danr/stm-promise
license:             LGPL-3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          danr@chalmers.se
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Concurrent.STM.Promise, Control.Concurrent.STM.Promise.Process
  ghc-options:         -Wall
  build-depends:       base, stm, process
