name:                stm-promise
category:            Concurrency
version:             0.1.0.0
license:             LGPL-3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          Dan Rosén <danr@chalmers.se>
homepage:            www.github.com/danr/stm-promise
bug-reports:         www.github.com/danr/stm-promise/issues
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.4.1, GHC == 7.6.1
synopsis:            Simple STM Promises for IO computations and external processes

source-repository head
  type: git
  location: git://github.com/danr/stm-promise.git

flag Werror
  default: False
  manual: True

library
  ghc-options:         -Wall
  if flag(Werror)
    ghc-options: -Werror

  exposed-modules:
    Control.Concurrent.STM.Promise,
    Control.Concurrent.STM.Promise.Process

  build-depends:
    base,
    stm,
    process

