name:                stm-promise
category:            Concurrency
version:             0.1
license:             LGPL-3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          Dan Rosén <danr@chalmers.se>
homepage:            http://www.github.com/danr/stm-promise
bug-reports:         http://www.github.com/danr/stm-promise/issues
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.4.1, GHC == 7.6.1
synopsis:            Simple STM Promises for IO computations and external processes

source-repository head
  type: git
  location: git://github.com/danr/stm-promise.git

flag Werror
  default: False
  manual: True

library
  ghc-options:         -Wall
  if flag(Werror)
    ghc-options: -Werror

  exposed-modules:
    Control.Concurrent.STM.Promise,
    Control.Concurrent.STM.Promise.Process,
    Control.Concurrent.STM.Promise.Tree,
    Control.Concurrent.STM.Promise.Workers,
    Control.Concurrent.STM.DTVar

  build-depends:
    base,
    stm                       >= 2.3,
    mtl,
    process

test-suite trees
  type:           exitcode-stdio-1.0
  main-is:        Trees.hs
  hs-source-dirs: test
  ghc-options:    -Wall
  if flag(Werror)
    ghc-options: -Werror

  build-depends:
    base,
    stm-promise,
    stm                       >= 2.3,
    QuickCheck                >= 2.4

